# workshop-logging

./: .gitignore  pyproject.toml  readme.md
exercises/: exercise.md
exercises/1_setup_a_logger/: main.py
exercises/2_write_a_processor/: main.py  test.py
exercises/3_full_customization/: main.py
solutions/1_setup_a_logger/: exersice2.py  exersice3.py  exersice4.py  exersice5.py  exersice6.py  exersice7.py  logging.conf
solutions/2_write_a_processor/: main.py  test.py
solutions/3_full_customization/: main.py
